<resources>
    <string name="app_name">Test OAuth</string>
    <string name="welcome">"Welcome !"</string>
    <string name="retry_timer">retry again in %d seconds</string>
    <string name="retry_now">retry now!!</string>
    <string name="large_text">
        "You're now signed in. \n\n\n"
        --------------------------------------------------------------->>>
        \n\nAuth Code is %1$s\n\n
        Code Verifier is %2$s\n\n
        State is %3$s\n\n
        Requested State is %4$s\n\n
        Scopes granted are %5$s\n\n
        Sim State is %6$s\n\n
        Device Code is %7$s\n\n
        --------------------------------------------------------------->>>
    </string>
    <string name="access_token">Access Token is %s</string>
    <string name="bearer_token">Bearer %s</string>
    <string name="clientId">6g-zufznlbljrqhw6qm6kwlkd0owahmqjxhzu7b4d0e</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="signin">Signin</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="popup_mode">Popup Mode</string>
    <string name="enhanced_bottom_sheet">Enhanced Bottom Sheet</string>
    <string name="never_call_enhanced_bottom_sheet_enabled">Never call setEnhancedBottomSheet()</string>
    <string name="init_sdk_loader_message">Initializing SDK…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dismiss_cross_button">Dismiss Cross Button</string>
    <string name="rectangular_button">Rectangular Button Shape</string>
    <string name="request_scopes">Request Scopes</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="openid">OpenId</string>
    <string name="offline_access">Offline Access</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="dismiss_options">Dismiss Options</string>
    <string name="cta_color">cta color</string>
    <string name="cta_text_color">cta text color</string>
    <string name="cta_text">cta text</string>
    <string name="heading_options">Heading Options</string>
    <string name="skip">Skip</string>
    <string name="use_another_number_uan">Use Another Number (UAN)</string>
    <string name="use_another_method">Use Another Method</string>
    <string name="enter_details_manually">Enter Details Manually</string>
    <string name="i_ll_do_later">I\'ll do later</string>
    <string name="verify_all_users">Verify all users</string>
    <string name="enter_locale_en">Enter locale : en</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="proceed">Proceed</string>
    <string name="loading">Loading…</string>
    <string name="oauth_sdk_demo">OAuth SDK Demo</string>
    <string-array name="SdkPartnerHeadingOptionsArray">
        <item>Login to %s</item>
        <item>Signup with %s</item>
        <item>Sign In to %s</item>
        <item>Verify number with %s</item>
        <item>Register with %s</item>
        <item>Get Started with %s</item>
        <item>Proceed with %s</item>
        <item>Verify with %s</item>
        <item>Verify profile with %s</item>
        <item>Verify your profile with %s</item>
        <item>Verify phone number with %s</item>
        <item>Verify your number with %s</item>
        <item>Continue with %s</item>
        <item>Complete order with %s</item>
        <item>Place order with %s</item>
        <item>Complete booking with %s</item>
        <item>Checkout with %s</item>
        <item>Manage details with %s</item>
        <item>Manage your details with %s</item>
        <item>Login to %s with one tap</item>
        <item>Subscribe to %s</item>
        <item>Get updates from %s</item>
        <item>Continue reading on %s</item>
        <item>Get new updates from %s</item>
        <item>Login/Signup with %s</item>
    </string-array>
    <string-array name="SdkPartnerCTAOptionsArray">
        <item>Proceed</item>
        <item>Continue</item>
        <item>Accept</item>
        <item>Confirm</item>
    </string-array>
    <string-array name="SdkPartnerDismissOptions">
        <item>None</item>
        <item>Cross Button</item>
        <item>Secondary CTA border</item>
    </string-array>
    <string-array name="SdkPartnerSampleColors">
        <item>#121E2C</item>
        <item>white</item>
        <item>#0f6cd9</item>
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>black</item>
        <item>gray</item>
        <item>cyan</item>
        <item>magenta</item>
        <item>yellow</item>
        <item>lightgray</item>
        <item>darkgray</item>
        <item>grey</item>
        <item>lightgrey</item>
        <item>darkgrey</item>
        <item>aqua</item>
        <item>fuchsia</item>
        <item>lime</item>
        <item>maroon</item>
        <item>navy</item>
        <item>olive</item>
        <item>purple</item>
        <item>silver</item>
        <item>teal</item>
    </string-array>
</resources>